--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
+<!doctype html>
+<html class="no-js" lang="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link rel="stylesheet" href="css/normalize.min.css">
+        <link rel="stylesheet" href="css/main.css">
+
+        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+		<style>
+		
+		</style>
+    </head>
+    <body>
+
+        <div class="fact1">
+            <p>1. I'm junior.</p>
+        </div>
+		
+        <div class="fact2">
+            <p>2. I'm international student.</p>
+        </div>
+		
+        <div class="fact3">
+            <p>3. There are 4 members in my family.</p>
+        </div>
+		
+        <div class="fact4">
+            <p>4. I have been to the Miami.</p>
+        </div>
+		
+        <div class="fact5">
+            <p>5. I like watching drama and listening to music.</p>
+        </div>
+        
+        <div class="fact6">
+            <p>6. My grandmother is a optimistic person.</p>
+        </div>
+      
+   
+
+        <script src="js/main.js"></script>
+    </body>
+</html>
 
